Fixed a layout bug with the cancel button on bookmark cards.
This aligns them at the bottom.

--- a/web/ui/styles/bookmark-list.scss
+++ b/web/ui/styles/bookmark-list.scss
@@ -306,7 +306,7 @@
     }
 
     &--deleted {
-      @apply p-2;
+      @apply p-2 place-self-end;
     }
 
     // Hover and focus on the card
